<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingBottom="10dp"
    android:background="@color/darkGrey"
    tools:ignore="Overdraw">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:paddingTop="24dp"/>
    <LinearLayout
        android:id="@+id/approve_pending_adoption_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_circle_white"
            android:contentDescription="@string/approve_adoption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Approve Pending Adoption"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/reject_pending_adoption_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel_white"
            android:contentDescription="@string/reject_adoption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reject Pending Adoption"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/send_an_email_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_white"
            android:contentDescription="@string/send_an_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send an Email"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</LinearLayout>