<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    android:paddingHorizontal="10dp"
    android:paddingBottom="30dp"
    tools:ignore="Overdraw">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:paddingTop="24dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="end|center_vertical">
        <ImageView
            android:id="@+id/saveDog"
            android:layout_width="48dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/add_white"
            android:textColor="@color/white"
            android:clickable="true"
            android:contentDescription="@string/update_dog"
            android:focusable="true" />
        <ImageView
            android:id="@+id/deleteDog"
            android:layout_width="48dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/remove_white"
            android:textColor="@color/white"
            android:clickable="true"
            android:contentDescription="@string/remove_dog"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/topInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/imageContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:minWidth="48dp"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/dogName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:lines="1"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Breed"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:minWidth="48dp"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/dogBreed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:lines="1"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </LinearLayout>


        </LinearLayout>
        <RelativeLayout
            android:id="@+id/imageContainer"
            app:layout_constraintLeft_toRightOf="@+id/topInfo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true">
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="12dp"
                app:cardCornerRadius="40dp"
                android:layout_centerHorizontal="true"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/dogImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@color/cardview_dark_background"
                    android:background="@color/darkGrey"
                    android:contentDescription="@string/dog_photo" />
            </androidx.cardview.widget.CardView>
            <ImageView
                android:id="@+id/imageEditIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_white"
                android:translationZ="2dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/dog_photo_icon" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="16dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date of Birth"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:minWidth="100dp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/dogDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Choose a Date"
            android:inputType="datetime"
            android:maxLines="1"
            android:lines="1"
            android:importantForAutofill="no"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</LinearLayout>